# test_cpp_hexagonal_rest_db

./: .gitignore  .gitlab-ci.yml  Makefile  compile_flags.txt  docker-compose.yml
ci/: build_crosscompile_arm64v8.sh  coverage.sh  deliver.sh  test.sh
ci/custom/: Dockerfile  get_docker_image_run.sh  get_project_name.sh  internal_build.sh  internal_build_crosscompile.sh  internal_coverage.sh  internal_test.sh
lib/: Makefile  module.mk
lib/asio/: CMakeLists.txt
lib/cpputest/: CMakeLists.txt
lib/doctest/: CMakeLists.txt
lib/generic_makefile/: modular_makefile.mk  modular_makefile.mk_old
lib/httplib/: CMakeLists.txt
lib/json/: CMakeLists.txt
lib/kashmir/: CMakeLists.txt
lib/pq/: CMakeLists.txt
lib/pqxx/: CMakeLists.txt
lib/restbed/: CMakeLists.txt
lib/spdlog/: CMakeLists.txt
lib/yaml/: CMakeLists.txt
resources/: config.json  config.yaml
src/: module.mk
src/adapters/: Makefile
src/adapters/inc/adapters/: adapters_factory.hpp
src/adapters/inc/adapters/controllers/: http_controller.hpp
src/adapters/inc/adapters/drivers/: config.hpp  config_loader.hpp  http_server.hpp  logger.hpp  persistence.hpp
src/adapters/src/: adapters_factory.cpp
src/adapters/src/controllers/: httplib_http_authors_controller.cpp  httplib_http_authors_controller.hpp  httplib_http_books_controller.cpp  httplib_http_books_controller.hpp  httplib_http_health_check_controller.cpp  httplib_http_health_check_controller.hpp  httplib_utils.cpp  httplib_utils.hpp  restbed_http_authors_controller.cpp  restbed_http_authors_controller.hpp  restbed_http_books_controller.cpp  restbed_http_books_controller.hpp  restbed_http_health_check_controller.cpp  restbed_http_health_check_controller.hpp
src/adapters/src/drivers/config/: json_config_loader.cpp  json_config_loader.hpp  yaml_config_loader.cpp  yaml_config_loader.hpp
src/adapters/src/drivers/http/: httplib_http_server.cpp  httplib_http_server.hpp  restbed_http_server.cpp  restbed_http_server.hpp  restbed_utils.cpp  restbed_utils.hpp
src/adapters/src/drivers/logger/: spdlog_logger.cpp  spdlog_logger.hpp
src/adapters/src/drivers/persistence/: postgresql_persistence.cpp  postgresql_persistence.hpp
src/adapters/src/repositories/: postgresql_authors_repository.cpp  postgresql_authors_repository.hpp  postgresql_books_repository.cpp  postgresql_books_repository.hpp
src/adapters/test/: empty_test.cpp  main.cpp
src/application/: Makefile
src/application/inc/application/: application_factory.hpp
src/application/inc/application/dtos/: author_dto.hpp  book_dto.hpp
src/application/inc/application/exceptions/: author_already_exists_exception.hpp  author_invalid_exception.hpp  book_already_exists_exception.hpp  book_invalid_exception.hpp
src/application/inc/application/ports/repositories/: authors_repository_port.hpp  books_repository_port.hpp
src/application/inc/application/ports/usecases/: add_author_usecase_port.hpp  add_book_usecase_port.hpp
src/application/src/: application_factory.cpp
src/application/src/usecases/: add_author_usecase.cpp  add_author_usecase.hpp  add_book_usecase.cpp  add_book_usecase.hpp
src/application/test/: add_author_usecase.cpp  add_book_usecase.cpp
src/application/test/mocks/: authors_repository_mock.hpp  books_repository_mock.hpp
src/domain/: Makefile
src/domain/inc/domain/: author.hpp  book.hpp
src/domain/src/: author.cpp  book.cpp
src/domain/test/: author.cpp  book.cpp  testutils.hpp
src/main/: main.cpp
src/test/: main.cpp
